--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,7 +1,7 @@
 // Основні кольори
 $primary-color: #000000;
 $secondary-color: #447F8D;
-$accent-color: #edc339;
+$accent-color: #f4c430;
 $light-color: #ffffff;
 $background-color: #29343E;
 $background-nav: #25282F;
