--- a/src/styles/About.scss
+++ b/src/styles/About.scss
@@ -129,7 +129,7 @@
   &:focus {
     border: 1px solid #FFBD4E;
     transform: scale(1);
-    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 30px #00000052;
   }
 
   &:hover .image_goal,
@@ -188,7 +188,7 @@
   &:focus {
     border: 1px solid #FFBD4E;
     transform: scale(1);
-    box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.3);
+    box-shadow: 0px 0px 30px #00000052;
   }
 
   &:hover .image_cooperation,
