--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -8,9 +8,9 @@
   top: 0;
   left: 0;
   right: 0;
-  -webkit-box-shadow: 3px 3px 10px 3px rgba(0, 0, 0, 0.45);
-  -moz-box-shadow: 3px 3px 10px 3px rgba(0, 0, 0, 0.45);
-  box-shadow: 3px 3px 10px 3px rgba(0, 0, 0, 0.45);
+  -webkit-box-shadow: 0px 0px 30px #00000052;
+  -moz-box-shadow: 0px 0px 30px #00000052;
+  box-shadow: 0px 0px 30px #00000052;
 
 
   display: flex;
@@ -56,7 +56,7 @@
     // background-color: $background-color;
     background-color: transparent;
     transform: translate(0);
-    transition: transform 0.9 ease-in;
+    transition: display 0.9 ease-in;
 
     & .navigation__list {
       background-color: #27303a;
@@ -121,7 +121,7 @@
     text-align: center;
     padding: 40px;
     border-bottom: 1px solid $accent-color;
-    font-size: 20px;
+    font-size: 30px;
 
     & li {
       margin: 15px 0;
