--- a/src/styles/Navigation.scss
+++ b/src/styles/Navigation.scss
@@ -97,6 +97,10 @@
 
       & .hours {
         margin: 30px 0;
+
+        & span {
+          color: $text-p-color;
+        }
       }
 
       & .socials {
